<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">Sharebuy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Iniciar Sesion</string>

    <!-- Strings relacionados con login -->
    <string name="prompt_user_id">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="error_invalid_user_id">Usuario Incorrecto</string>
    <string name="error_invalid_password">Contraseña demasiado Corta</string>
    <string name="error_incorrect_password">La Contraseña es Incorrecta</string>
    <string name="error_field_required">Este Campo es Obligatorio</string>
    <string name="error_server">Error en el Servidor</string>
    <string name="error_incorrect_user_id">Usuario no Registrado</string>
    <string name="error_network">Conexion de red no disponible</string>


    <!-- Strings relacionados con Formulario -->

    <string name="lbl_name"> Nombre</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_contraseña">Contraseña</string>
    <string name="lbl_verificarContraseña">Repetir Contraseña</string>
    <string name="btn_registrarse">Registrarse </string>
    <string name="title_activity_principal">ActivityPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings relacionados con chat -->
    <string name="user_successfully_added">Usuario añadido satisfactoriamente!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Añadiendo usuario a la base de datos....</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Escribir mensaje...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="action_images">Articulos en Venta</string>
    <string name="images">Artículos</string>
    <string name="are_you_sure">Estas seguro?</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_show_images">ShowImagesActivity</string>
    <string name="action_chat">Chat</string>
    <string name="action_subirArticulo">Subir Articulo</string>
</resources>
