<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.arizmendi43.sfernandez.sharebuyapp.ui.activities.LoginActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="200"
        android:title="@string/action_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_images"
        android:orderInCategory="300"
        android:title="@string/action_images"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_subirArticulo"
        android:orderInCategory="400"
        android:title="@string/action_subirArticulo"
        app:showAsAction="never" />


</menu>